PROJECT (mysqlslave)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
INCLUDE (CMakeMacro.cmake)
INCLUDE_DIRECTORIES (include)

SET (CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_SHARED_LIBRARY_SUFFIX})
USE_PACKAGE (mysqlclient_r mysql.h PATH_SUFFIXES mysql)
SET (CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX} ${CMAKE_SHARED_LIBRARY_SUFFIX})

AUX_SOURCE_DIRECTORY(src/mysqlslave SRC_MYSQLSLAVE)
ADD_LIBRARY(mysqlslave ${SRC_MYSQLSLAVE})
TARGET_LINK_LIBRARIES(mysqlslave ${LIB_mysqlclient_r} z)

AUX_SOURCE_DIRECTORY(src/test SRC_MYSQLSLAVE_TEST)
ADD_EXECUTABLE(test_mysqlslave ${SRC_MYSQLSLAVE_TEST})
TARGET_LINK_LIBRARIES(test_mysqlslave mysqlslave pthread)
INSTALL(TARGETS mysqlslave DESTINATION ${LIBDIR})
INSTALL(DIRECTORY mysqlslave/ DESTINATION include/mysqlslave FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY mysqlslave/ DESTINATION include/mysqlslave FILES_MATCHING PATTERN "*.hpp")

