CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (mysqlslave VERSION 0.1.4.0)
INCLUDE (CMakeMacro.cmake)
INCLUDE_DIRECTORIES (include)

IF (NOT LIB_INSTALL_DIR)
    SET (LIB_INSTALL_DIR lib/)
ENDIF (NOT LIB_INSTALL_DIR)

SET (CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX} ${CMAKE_SHARED_LIBRARY_SUFFIX})
FIND_LIBRARY (LIB_mysqlclient NAMES mysqlclient_r mysqlclient PATH_SUFFIXES mysql)

IF (LIB_mysqlclient)
  MESSAGE (STATUS "FOUND ${LIB_mysqlclient}")  # SHOULD BE BOLD GREEN
ELSE ()
  MESSAGE (STATUS "ERROR ${LIB_mysqlclient}")  # SHOULD BE BOLD RED
ENDIF ()

FIND_PATH (INC_mysql mysql.h PATH_SUFFIXES mysql)

FIND_PATH (INC_mysql mysql.h PATH_SUFFIXES mysql)
IF (INC_mysql)
  MESSAGE (STATUS "FOUND ${INC_mysql}/mysql.h")  # SHOULD BE BOLD GREEN
  INCLUDE_DIRECTORIES (${INC_mysql})
  INCLUDE_DIRECTORIES (${INC_mysql}/private)
ELSE ()
  MESSAGE (STATUS "ERROR ${INC_mysql}/mysql.h")  # SHOULD BE BOLD RED
ENDIF ()

AUX_SOURCE_DIRECTORY(src/mysqlslave SRC_MYSQLSLAVE)
ADD_LIBRARY(mysqlslave STATIC ${SRC_MYSQLSLAVE})
TARGET_LINK_LIBRARIES(mysqlslave ${LIB_mysqlclient} z ssl crypto jsoncpp dl)

AUX_SOURCE_DIRECTORY(src/test SRC_MYSQLSLAVE_TEST)
ADD_EXECUTABLE(test_mysqlslave ${SRC_MYSQLSLAVE_TEST})
TARGET_LINK_LIBRARIES(test_mysqlslave mysqlslave pthread z)
INSTALL(TARGETS mysqlslave DESTINATION lib)
INSTALL(DIRECTORY include/mysqlslave/ DESTINATION include/mysqlslave FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY include/mysqlslave/ DESTINATION include/mysqlslave FILES_MATCHING PATTERN "*.hpp")


IF (NOT CPACK_GENERATOR)
    SET (CPACK_GENERATOR "RPM" "DEB" "ZIP" "TGZ")
ENDIF (NOT CPACK_GENERATOR)
SET (CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
SET (CPACK_PACKAGE_NAME "libmysqlslave")
SET (CPACK_PACKAGE_CONTACT "pianist@usrsrc.ru")
SET (CPACK_PACKAGE_RELEASE 1)
SET (CPACK_RPM_PACKAGE_AUTOREQ "no")
SET (CPACK_RPM_PACKAGE_AUTOREQPROV "no")
SET (CPACK_PACKAGING_INSTALL_PREFIX /usr)
SET (CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
SET (CPACK_PACKAGE_VENDOR "Artist")
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/libmysqlslave.spec.in"
  "${CMAKE_CURRENT_BINARY_DIR}/libmysqlslave.spec"
  @ONLY IMMEDIATE)
SET (CPACK_RPM_USER_BINARY_SPECFILE "${CMAKE_SOURCE_DIR}/libmysqlslave.spec")
INCLUDE (CPack)
